All wiring issues fixed ready to deploy